--- a/Fargate-Demo/Fargate-Demo.csproj
+++ b/Fargate-Demo/Fargate-Demo.csproj
@@ -16,6 +16,17 @@
 
   <ItemGroup>
     <Folder Include="clientapp\" />
+    <Folder Include="clientapp\dist\clientapp\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\3rdpartylicenses.txt" />
+    <None Include="wwwroot\favicon.ico" />
+    <None Include="wwwroot\index.html" />
+    <None Include="wwwroot\main.05d4b55a4a7b1142.js" />
+    <None Include="wwwroot\polyfills.76f0bf6e064d2e6a.js" />
+    <None Include="wwwroot\runtime.1e0051753b9f1daa.js" />
+    <None Include="wwwroot\styles.ef46db3751d8e999.css" />
   </ItemGroup>
 
 </Project>
