--- a/Fargate-Demo/Fargate-Demo.csproj
+++ b/Fargate-Demo/Fargate-Demo.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>Fargate_Demo</RootNamespace>
@@ -10,23 +10,26 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="clientapp\dist\**" />
+    <Content Remove="clientapp\dist\**" />
+    <EmbeddedResource Remove="clientapp\dist\**" />
+    <None Remove="clientapp\dist\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.20.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="clientapp\" />
-    <Folder Include="clientapp\dist\clientapp\" />
+    <Folder Include="wwwroot\" />
   </ItemGroup>
 
-  <ItemGroup>
-    <None Include="wwwroot\3rdpartylicenses.txt" />
-    <None Include="wwwroot\favicon.ico" />
-    <None Include="wwwroot\index.html" />
-    <None Include="wwwroot\main.05d4b55a4a7b1142.js" />
-    <None Include="wwwroot\polyfills.76f0bf6e064d2e6a.js" />
-    <None Include="wwwroot\runtime.1e0051753b9f1daa.js" />
-    <None Include="wwwroot\styles.ef46db3751d8e999.css" />
-  </ItemGroup>
+	<Target Name="PublishRunWebpack" AfterTargets="ComputeFilesToPublish">
+		<!-- Ensure Node.js is installed, then build the Angular project -->
+		<Exec Command="npm install" WorkingDirectory="clientapp" />
+		<Exec Command="npm run build" WorkingDirectory="clientapp" />
+	</Target>
 
 </Project>
